--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 body{
+    background-color: hsl(0, 0%, 86%);
     height: 100vh;
     display: flex;
     flex-direction: column;
